Use the win10 native avatar button only for AvatarButtonStyle::NATIVE

OpaqueBrowserFrameView creates AvatarButton with AvatarButtonStyle::THEMED,
and this leads to DCHECK_EQ failure at the constructor of AvatarButton.

BUG=723070

Review-Url: https://codereview.chromium.org/2891573002
Cr-Commit-Position: refs/heads/master@{#472443}

Former-commit-id: 1b08234bf776baa8a8517fc6c0145526055353d0